// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders Pagination with customized props correctly 1`] = `
<div>
  <div
    class="ui-pagination bordered"
  >
    <div
      class="ui-pagination-pagers"
    >
      <ul>
        <div
          class="ui-pagination-addon-before"
        >
          addonBefore
        </div>
        <li
          class="ui-pagination-item ui-pagination-item-prev ui-pagination-item-disabled"
          title="上一页"
        >
          <i
            class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-left"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-left"
              />
            </svg>
          </i>
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-active"
          title="1"
        >
          1
        </li>
        <li
          class="ui-pagination-item"
          title="2"
        >
          2
        </li>
        <li
          class="ui-pagination-item"
          title="3"
        >
          3
        </li>
        <li
          class="ui-pagination-item"
          title="4"
        >
          4
        </li>
        <li
          class="ui-pagination-item"
          title="5"
        >
          5
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-jump-next"
          title="向后 5 页"
        />
        <li
          class="ui-pagination-item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-next"
          title="下一页"
        >
          <i
            class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-right"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-right"
              />
            </svg>
          </i>
        </li>
        <div
          class="ui-pagination-addon-after"
        >
          addonAfter
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Pagination renders Pagination with jumper correctly 1`] = `
<div>
  <div
    class="ui-pagination"
  >
    <div
      class="ui-pagination-pagers"
    >
      <ul>
        <li
          class="ui-pagination-item ui-pagination-item-prev ui-pagination-item-disabled"
          title="上一页"
        >
          <i
            class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-left"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-left"
              />
            </svg>
          </i>
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-active"
          title="1"
        >
          1
        </li>
        <li
          class="ui-pagination-item"
          title="2"
        >
          2
        </li>
        <li
          class="ui-pagination-item"
          title="3"
        >
          3
        </li>
        <li
          class="ui-pagination-item"
          title="4"
        >
          4
        </li>
        <li
          class="ui-pagination-item"
          title="5"
        >
          5
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-jump-next"
          title="向后 5 页"
        />
        <li
          class="ui-pagination-item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-next"
          title="下一页"
        >
          <i
            class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-right"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-right"
              />
            </svg>
          </i>
        </li>
      </ul>
      <div
        class="ui-pagination-jumper"
      >
        跳至
        <input
          class="zw-input zw-input--sm zw-input--radius zw-input--with-bordered"
          style="width:50px;text-align:center;margin-left:5px;margin-right:5px"
          type="text"
          value=""
        />
        页
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination renders Pagination with total info correctly 1`] = `
<div>
  <div
    class="ui-pagination"
  >
    <div
      class="ui-pagination-total"
    >
      共有 100 条记录 第 1 / 10 页
    </div>
    <div
      class="ui-pagination-pagers"
    >
      <ul>
        <li
          class="ui-pagination-item ui-pagination-item-prev ui-pagination-item-disabled"
          title="上一页"
        >
          <i
            class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-left"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-left"
              />
            </svg>
          </i>
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-active"
          title="1"
        >
          1
        </li>
        <li
          class="ui-pagination-item"
          title="2"
        >
          2
        </li>
        <li
          class="ui-pagination-item"
          title="3"
        >
          3
        </li>
        <li
          class="ui-pagination-item"
          title="4"
        >
          4
        </li>
        <li
          class="ui-pagination-item"
          title="5"
        >
          5
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-jump-next"
          title="向后 5 页"
        />
        <li
          class="ui-pagination-item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-next"
          title="下一页"
        >
          <i
            class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-right"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-right"
              />
            </svg>
          </i>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Pagination renders normal Pagination correctly 1`] = `
<div>
  <div
    class="ui-pagination"
  >
    <div
      class="ui-pagination-pagers"
    >
      <ul>
        <li
          class="ui-pagination-item ui-pagination-item-prev ui-pagination-item-disabled"
          title="上一页"
        >
          <i
            class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-left"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-left"
              />
            </svg>
          </i>
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-active"
          title="1"
        >
          1
        </li>
        <li
          class="ui-pagination-item"
          title="2"
        >
          2
        </li>
        <li
          class="ui-pagination-item"
          title="3"
        >
          3
        </li>
        <li
          class="ui-pagination-item"
          title="4"
        >
          4
        </li>
        <li
          class="ui-pagination-item"
          title="5"
        >
          5
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-jump-next"
          title="向后 5 页"
        />
        <li
          class="ui-pagination-item"
          title="最后一页"
        >
          10
        </li>
        <li
          class="ui-pagination-item ui-pagination-item-next"
          title="下一页"
        >
          <i
            class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
            theme="default"
            type="arrow-right"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#arrow-right"
              />
            </svg>
          </i>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
